--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -4,35 +4,20 @@ on:
 
 jobs:
   run:
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-        - os: ubuntu-latest
-          rust: stable
-        - os: macos-latest
-          rust: nightly
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - name: Install chrome
+        uses: browser-actions/setup-chrome@v2
 
-      - name: Install chromedriver
-        uses: nanasess/setup-chromedriver@v2
-
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@master
+      - name: Install cli
+        uses: robinraju/release-downloader@v1
         with:
-          toolchain: ${{ matrix.rust }}
-
-      - name: Cache rust dependencies
-        uses: Swatinem/rust-cache@v2
-
-      - name: Run chromedriver
-        run: |
-          export DISPLAY=:99
-          chromedriver --port=9515 &
-          sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 &
+          fileName: 'ad-clicker-x86_64-unknown-linux-gnu.tar.gz'
+          latest: true
+          tarBall: true
+          extract: true
 
       - name: Run CLI
-        run: cargo run
+        env:
+          URL: ${{ secrets.URL }}
+        run: ./ad-clicker-x86_64-unknown-linux-gnu/ad-clicker
