--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,15 @@
 name = "ad-clicker"
 version = "0.1.0"
 edition = "2024"
+repository = "https://github.com/akagiyuu/ad-clicker"
 
 [dependencies]
 anyhow = "1.0.98"
-clap = { version = "4.5.43", features = ["derive"] }
+chromiumoxide = { version = "0.7.0", default-features = false, features = ["tokio-runtime"] }
 futures = "0.3.31"
-thirtyfour = { version = "0.36.1", features = ["tokio-multi-threaded"] }
 tokio = { version = "1.47.1", features = ["full"] }
+
+# The profile that 'dist' will build with
+[profile.dist]
+inherits = "release"
+lto = "thin"
